[gd_scene load_steps=3 format=2]

[ext_resource path="res://addons/SDC/Resources/CertaFont.tres" type="DynamicFont" id=1]
[ext_resource path="res://addons/SDC/Scripts/CharacterCell.gd" type="Script" id=2]


[node name="CharCell" type="HBoxContainer"]
margin_right = 390.0
margin_bottom = 29.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="IdText" type="LineEdit" parent="."]
margin_right = 177.0
margin_bottom = 29.0
size_flags_horizontal = 3
placeholder_text = "id"
placeholder_alpha = 0.33

[node name="NameText" type="LineEdit" parent="."]
margin_left = 181.0
margin_right = 358.0
margin_bottom = 29.0
size_flags_horizontal = 3
placeholder_text = "name"
placeholder_alpha = 0.33

[node name="DelBtn" type="Button" parent="."]
margin_left = 362.0
margin_right = 389.0
margin_bottom = 29.0
rect_min_size = Vector2( 27, 29 )
custom_fonts/font = ExtResource( 1 )
text = "X"
[connection signal="text_changed" from="IdText" to="." method="_on_text_changed"]
[connection signal="text_changed" from="NameText" to="." method="_on_text_changed"]
[connection signal="pressed" from="DelBtn" to="." method="_on_DelBtn_pressed"]
